[package]
name = "rust-chat"
version = "0.1.0"
edition = "2018"
description="Exploration app for rust ws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["fs", "sync", "time", "io-util"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.6", features = ["io"] }
warp = "0.3.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
pretty_env_logger = "0.4"
tracing-subscriber = "0.2.7"
tracing-log = "0.1"
serde_derive = "1.0"
handlebars = "4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
listenfd = "0.3"
